--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -1,7 +1,34 @@
-.black-nav {
-    background : black;
-    width : 100%;
-    display : flex;
-    color : white;
-    padding : 20px;
-  }
+/* Header.css */
+
+.header {
+  background: black;
+  color: white;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo img {
+  width: 100px; /* 로고 이미지의 너비 조정 */
+}
+
+.menu ul {
+  list-style: none;
+  display: flex;
+}
+
+.menu li {
+  margin-right: 20px; /* 메뉴 아이템 간격 조정 */
+}
+
+.menu a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  transition: color 0.3s; /* 링크 컬러 트랜지션 효과 */
+}
+
+.menu a:hover {
+  color: gray; /* 링크에 호버 시 색상 변경 */
+}
