--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,36 +1,30 @@
-.content {
-  /* background-image: url('/img/bg01.png');  */
-  background-size: cover;
-  /* 다른 배경 속성을 필요에 따라 추가할 수 있습니다 */
+/* 배경 스타일 */
+.mainContent {
+  background: black;
+  position: relative;
+  display: flex;
+  width: 100vw;
+  /* height: 100vh; */
 }
 
-
-.App {
-  text-align: center;
+/* 조명 이미지 */
+.mainContent.light {
+  position: relative;
+  z-index: 1; /* z-index를 추가하여 가장 아래에 위치하도록 설정 */
 }
 
-.header {
-  background-color: lightblue; /* 헤더 배경색 설정 */
-  padding: 20px;
-  color: white;
+/* 작은 직사각형 이미지 1 */
+.mainContent.small-rect1 {
+  /* background: url('/section01-2.png'); */
+  position: relative;
+
+  z-index: 2; /* z-index를 추가하여 두 번째로 위에 위치하도록 설정 */
 }
 
-.section {
-  padding: 50px;
-  color: white;
-}
+/* 작은 직사각형 이미지 2 */
+.mainContent.small-rect2 {
+  /* background: url(작은직사각형2.jpg);  */
 
-.footer {
-  background-color: lightblue; /* 푸터 배경색 설정 */
-  padding: 20px;
-  color: white;
-}
-
-/* 각 섹션의 배경 색상을 설정합니다 */
-section:nth-child(odd) {
-  background-color: black;
-}
-
-section:nth-child(even) {
-  background-color: white;
+  position: relative;
+  z-index: 3; /* z-index를 추가하여 가장 위에 위치하도록 설정 */
 }
